--- a/Maven-Customer-Management-Postman-Rest/.settings/org.eclipse.wst.common.component
+++ b/Maven-Customer-Management-Postman-Rest/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="context-root" value="Maven-Customer-Management-Postman-Rest"/>
         <property name="java-output-path" value="/Maven-Customer-Management-Postman-Rest/target/classes"/>
     </wb-module>
